--- a/webapp/exercise/index.html
+++ b/webapp/exercise/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 
     <!-- bootstrap stylesheet -->
-    <link rel="stylesheet" meida="screen"
+    <link rel="stylesheet" media="screen"
           href="resources/lib/bootstrap/css/bootstrap.min.css"/>
     <!-- page transition stylesheets -->
     <link rel="stylesheet" type="text/css"
