--- a/webapp/exercise/index.html
+++ b/webapp/exercise/index.html
@@ -55,5 +55,24 @@
 <script src="resources/js/controllers.js"></script>
 <script src="resources/js/directives.js"></script>
 <script src="resources/js/services.js"></script>
+
+<!-- UserVoice JavaScript SDK (only needed once on a page) -->
+<script>(function(){var uv=document.createElement('script');uv.type='text/javascript';uv.async=true;uv.src='//widget.uservoice.com/Jm4hT0XRbjXkakWS0jZlA.js';var s=document.getElementsByTagName('script')[0];s.parentNode.insertBefore(uv,s)})()</script>
+
+<!-- A tab to launch the Classic Widget -->
+<script>
+    UserVoice = window.UserVoice || [];
+    UserVoice.push(['showTab', 'classic_widget', {
+        mode: 'feedback',
+        primary_color: '#cc6d00',
+        link_color: '#007dbf',
+        forum_id: 234454,
+        tab_label: '您的想法？',
+        tab_color: '#cc6d00',
+        tab_position: 'bottom-right',
+        tab_inverted: false
+    }]);
+</script>
+
 </body>
 </html>
