fix qq uservoice ui

--- a/webapp/me/index.html
+++ b/webapp/me/index.html
@@ -51,19 +51,19 @@
             </h3>
 
             <div ng-show="loggedin">
-                <div>
+                <h5>
                     请发送学生列表到邮箱 <a href="mailto:kefu@ghxz.cn">kefu@ghxz.cn</a>，我们将创建您的班级。
-                </div>
+				</h5>
 
                 <div style="margin-top: 20px">
-                    <h4>联系我们</h4>
+                    <h5>QQ群号:125661141
                     <a target="_blank"
                        href="http://shang.qq.com/wpa/qunwpa?idkey=231f780bc481464f5c573d2f3b6b499c1131ca1331c680fa267d00ebe7b6fc9e"><img
                             border="0" src="http://pub.idqqimg.com/wpa/images/group.png" alt="提高班-老师交流群"
-                            title="提高班-老师交流群"></a></div>
+                            title="提高班-老师交流群"></a></h5></div>
 
                 <div style="margin-top: 20px">
-                    <button class="ladda-button btn btn-success btn-lg btn-block" ng-click="exercise()">
+                    <button class="ladda-button btn btn-success btn-lg btn-block" style="margin-bottom: 10px" ng-click="exercise()">
                         体验数学提高班
                     </button>
                     <button ng-click="signout()" class="ladda-button btn btn-link" ng-click="signout()">
