[yanan] add mixpanel tools and fix some issues

--- a/webapp/login/index.html
+++ b/webapp/login/index.html
@@ -39,6 +39,14 @@
             window.open("views/chrome.html", "_self");
         }
     </script>
+    <script type="text/javascript">
+        (function(e,b){if(!b.__SV){var a,f,i,g;window.mixpanel=b;a=e.createElement("script");a.type="text/javascript";a.async=!0;a.src=("https:"===e.location.protocol?"https:":"http:")+'//cdn.mxpnl.com/libs/mixpanel-2.2.min.js';f=e.getElementsByTagName("script")[0];f.parentNode.insertBefore(a,f);b._i=[];b.init=function(a,e,d){function f(b,h){var a=h.split(".");2==a.length&&(b=b[a[0]],h=a[1]);b[h]=function(){b.push([h].concat(Array.prototype.slice.call(arguments,0)))}}var c=b;"undefined"!==
+                typeof d?c=b[d]=[]:d="mixpanel";c.people=c.people||[];c.toString=function(b){var a="mixpanel";"mixpanel"!==d&&(a+="."+d);b||(a+=" (stub)");return a};c.people.toString=function(){return c.toString(1)+".people (stub)"};i="disable track track_pageview track_links track_forms register register_once alias unregister identify name_tag set_config people.set people.set_once people.increment people.append people.track_charge people.clear_charges people.delete_user".split(" ");for(g=0;g<i.length;g++)f(c,i[g]);
+            b._i.push([a,e,d])};b.__SV=1.2}})(document,window.mixpanel||[]);
+        mixpanel.init("2565f95f1bb387b875e146a94d264c36");
+    </script>
+    <script src="js/mixpanel.js"></script>
+
 </head>
 
 <body style="background: url('landscape.jpg') no-repeat center center fixed;">
@@ -57,7 +65,7 @@
                     </button>
                 </div>
                 <div style="margin-top: 20px">
-                    <button ng-click="signout()" class="ladda-button btn btn-link" ng-click="signout()">
+                    <button ng-click="signout()" class="ladda-button btn btn-link">
                         我不是 {{user.username}} 重新登录
                     </button>
                 </div>
@@ -94,6 +102,9 @@
                         $scope.user = data;
                         $scope.loggedin = true;
                         console.log('logged in,%s', data);
+                        //Mixpanel
+                        initMixpanel($scope.user._id,$scope.user.username,$scope.user.name,$scope.user.usergroup);
+                        signIn($scope.user._id,$scope.user.username,$scope.user.name,$scope.user.usergroup);
                     }).error(function (data, status, headers, config) {
                         $scope.status = "login failed";
                         delete $scope.user;
@@ -117,6 +128,7 @@
         $scope.signout = function () {
             $http.get('/signout')
                     .success(function (data, status, headers, config) {
+                        UserRelated.logout();
                         checklogin();
                     })
                     .error(function (data, status, headers, config) {
