--- a/webapp/me/index.html
+++ b/webapp/me/index.html
@@ -36,7 +36,7 @@
             // is Google chrome
         } else {
             // not Google chrome
-            window.open("views/chrome.html", "_self");
+            window.open("chrome.html", "_self");
         }
     </script>
 </head>
