--- a/webapp/exercise/index.html
+++ b/webapp/exercise/index.html
@@ -92,5 +92,17 @@
         tab_inverted: false
     }]);
 </script>
+
+<div id="baidutongji">
+    <script type="text/javascript">
+        var _bdhmProtocol = (("https:" == document.location.protocol) ? " https://" : " http://");
+        document.write(unescape("%3Cscript src='" + _bdhmProtocol + "hm.baidu.com/h.js%3F010203819208ca8ab53be35241149911' type='text/javascript'%3E%3C/script%3E"));
+        $(document).ready(function () {
+            var baiduLogo = document.getElementById("baidutongji");
+            baiduLogo.style.display = "none";
+        })
+    </script>
+</div>
+
 </body>
 </html>
