--- a/webapp/login/chrome.html
+++ b/webapp/login/chrome.html
@@ -19,7 +19,7 @@
 		<h4>我们目前暂不支持您正在使用的浏览器，建议您使用360极速浏览器或者谷歌Chrome浏览器</h4>
 		<div style="padding:15px;">
 			<button type="submit" class="btn btn-default" data-style="expand-right" value="submit" style="color:#ec793a;background-color:transparent;border-color: #ec793a;"
-                    onclick="window.open('http://www.google.com/intl/zh-CN/chrome/');">下载360极速浏览器</button>
+                    onclick="window.open('http://chrome.360.cn/');">下载360极速浏览器</button>
 		</div>
 		<div style="padding:15px;">
 			<button type="submit" class="btn btn-default" data-style="expand-right" value="submit" style="color:#ec793a;background-color:transparent;border-color: #ec793a;"
