[yanan] Add Mixpanel badge to our index.html

--- a/webapp/login/index.html
+++ b/webapp/login/index.html
@@ -169,7 +169,9 @@
         })
     </script>
 </div>
-
+<div   style="position:fixed;left: 0;bottom: 0">
+    <a href="https://mixpanel.com/f/partner"><img src="//cdn.mxpnl.com/site_media/images/partner/badge_blue.png" alt="Mobile Analytics" /></a>
+</div>
 <script>
     $(document).ready(function(){
         Utils.unregisterSP();
